--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
-HOST = 127.0.0.1
+HOST = '127.0.0.1'
 PORT = 3000
+
+DATABASE_HOST = '127.0.0.1'
+DATABASE_PORT = 5432
+DATABASE_USER = 'postgres'
+DATABASE_PASSWORD = __SECRET__
+DATABASE_NAME = 'thuandmt_storefront'
+DATABASE_MIGRATIONS_DIR = 'src/database/migrations'
 
 LOGS_DIR = 'logs'
