--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,10 @@
       "name": "Launch Program",
       "program": "${workspaceFolder}/src/main.ts",
       "preLaunchTask": "npm: build",
-      "outFiles": ["${workspaceFolder}/dist/**/*.js"]
+      "outFiles": ["${workspaceFolder}/dist/**/*.js"],
+      "outputCapture": "std",
+      "sourceMaps": true,
+      "args": ["--mode", "development"]
     }
   ]
 }
