--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "start": "node dist/src/main.js",
+    "start": "node dist/src/main.js --mode production",
     "lint": "eslint .",
     "test": "jest"
   },
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "helmet": "^8.0.0",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
     "type-fest": "^4.26.1",
@@ -32,6 +33,7 @@
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.4",
+    "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.12.0",
