--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
       "pattern": "/\\* sql \\*/[\\s]*`[\\s\\S]*`"
     }
   ],
-  "cSpell.words": ["thuandmt", "tsbuildinfo", "tsdoc", "tsyringe", "Udacity", "uncolorize"],
+  "cSpell.words": ["postgre", "thuandmt", "tsbuildinfo", "tsdoc", "tsyringe", "Udacity", "uncolorize"],
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
     "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
